--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "axios": "^1.12.2",
     "formik": "^2.4.6",
     "lucide-react": "^0.544.0",
+    "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.9.3",
+    "react-select": "^5.10.2",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.14",
     "yup": "^1.7.1"
